--- a/StudentRecordManagementSystem/App.config
+++ b/StudentRecordManagementSystem/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <connectionStrings>
+      <add connectionString="server=localhost;user=root;pwd=;database=student_record_system" name="students" providerName="MySql.Data.MySqlClient"/>
+    </connectionStrings>
 </configuration>
