Course adding enabled

--- a/DbConnection/DataAccess.csproj
+++ b/DbConnection/DataAccess.csproj
@@ -56,7 +56,10 @@
   <ItemGroup>
     <Compile Include="DbConnector.cs" />
     <Compile Include="DepartmentManager.cs" />
+    <Compile Include="Exceptions\CourseAlreadyExistsException.cs" />
     <Compile Include="Models\BioDataModel.cs" />
+    <Compile Include="CourseManager.cs" />
+    <Compile Include="Models\CourseModel.cs" />
     <Compile Include="Models\StaffPrimaryModel.cs" />
     <Compile Include="RolesManager.cs" />
     <Compile Include="StaffManager.cs" />
@@ -66,6 +69,7 @@
     <Compile Include="Models\RoleModel.cs" />
     <Compile Include="Models\StaffModel.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
