--- a/DbConnection/DataAccess.csproj
+++ b/DbConnection/DataAccess.csproj
@@ -57,10 +57,13 @@
     <Compile Include="DbConnector.cs" />
     <Compile Include="DepartmentManager.cs" />
     <Compile Include="Exceptions\CourseAlreadyExistsException.cs" />
+    <Compile Include="Exceptions\CourseDoesNotExistException.cs" />
+    <Compile Include="Exceptions\CourseHasNoUnitsException.cs" />
     <Compile Include="Models\BioDataModel.cs" />
     <Compile Include="CourseManager.cs" />
     <Compile Include="Models\CourseModel.cs" />
     <Compile Include="Models\StaffPrimaryModel.cs" />
+    <Compile Include="Models\UnitModel.cs" />
     <Compile Include="RolesManager.cs" />
     <Compile Include="StaffManager.cs" />
     <Compile Include="StudentManager.cs" />
@@ -68,6 +71,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\RoleModel.cs" />
     <Compile Include="Models\StaffModel.cs" />
+    <Compile Include="UnitManager.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
