Created Data access for Session manager

--- a/DbConnection/DataAccess.csproj
+++ b/DbConnection/DataAccess.csproj
@@ -59,6 +59,8 @@
     <Compile Include="Exceptions\CourseAlreadyExistsException.cs" />
     <Compile Include="Exceptions\CourseDoesNotExistException.cs" />
     <Compile Include="Exceptions\CourseHasNoUnitsException.cs" />
+    <Compile Include="Exceptions\UnitAlreadyExistsException.cs" />
+    <Compile Include="Exceptions\UnitDoesNotExistException.cs" />
     <Compile Include="Models\BioDataModel.cs" />
     <Compile Include="CourseManager.cs" />
     <Compile Include="Models\CourseModel.cs" />
