--- a/DbConnection/DataAccess.csproj
+++ b/DbConnection/DataAccess.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Exceptions\CourseAlreadyExistsException.cs" />
     <Compile Include="Exceptions\CourseDoesNotExistException.cs" />
     <Compile Include="Exceptions\CourseHasNoUnitsException.cs" />
+    <Compile Include="Exceptions\NotSelectedUpdateException.cs" />
     <Compile Include="Exceptions\SessionAlreadyExistsException.cs" />
     <Compile Include="Exceptions\UnitAlreadyExistsException.cs" />
     <Compile Include="Exceptions\UnitDoesNotExistException.cs" />
