fingerprint registration for student enabled

--- a/DbConnection/DataAccess.csproj
+++ b/DbConnection/DataAccess.csproj
@@ -61,16 +61,20 @@
     <Compile Include="Exceptions\CourseHasNoUnitsException.cs" />
     <Compile Include="Exceptions\NotSelectedUpdateException.cs" />
     <Compile Include="Exceptions\SessionAlreadyExistsException.cs" />
+    <Compile Include="Exceptions\StudentAlreadyExistsException.cs" />
     <Compile Include="Exceptions\UnitAlreadyExistsException.cs" />
     <Compile Include="Exceptions\UnitDoesNotExistException.cs" />
+    <Compile Include="Exceptions\WrongUsernamePasswordException.cs" />
     <Compile Include="Models\BioDataModel.cs" />
     <Compile Include="CourseManager.cs" />
     <Compile Include="Models\CourseModel.cs" />
     <Compile Include="Models\SessionModel.cs" />
+    <Compile Include="Models\StaffAuthModel.cs" />
     <Compile Include="Models\StaffPrimaryModel.cs" />
     <Compile Include="Models\UnitModel.cs" />
     <Compile Include="RolesManager.cs" />
     <Compile Include="SessionManager.cs" />
+    <Compile Include="StaffAuthenticationManager.cs" />
     <Compile Include="StaffManager.cs" />
     <Compile Include="StudentManager.cs" />
     <Compile Include="Models\DepartmentModel.cs" />
