--- a/StudentRecordManagementSystem/StudentRecordManagementSystem.csproj
+++ b/StudentRecordManagementSystem/StudentRecordManagementSystem.csproj
@@ -54,7 +54,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ftrSDKHelper13">
-      <HintPath>..\..\SDK 4.2\Examples\Net\Vs2013\ftrSDKHelper\x64\Debug\ftrSDKHelper13.dll</HintPath>
+      <HintPath>..\..\SDK 4.2\Bin\ftrSDKHelper13.dll</HintPath>
     </Reference>
     <Reference Include="MaterialSkin, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MaterialSkin.0.2.1\lib\MaterialSkin.dll</HintPath>
@@ -110,6 +110,7 @@
     <Compile Include="Dashboard.Designer.cs">
       <DependentUpon>Dashboard.cs</DependentUpon>
     </Compile>
+    <Compile Include="DbName.cs" />
     <Compile Include="DbRecord.cs" />
     <Compile Include="DepartmentControl.cs">
       <SubType>UserControl</SubType>
@@ -123,13 +124,38 @@
     <Compile Include="DepartmentForm.Designer.cs">
       <DependentUpon>DepartmentForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Exceptions\InvalidInputException.cs" />
+    <Compile Include="FingerprintCancelBioDelete.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FingerprintCancelBioDelete.Designer.cs">
+      <DependentUpon>FingerprintCancelBioDelete.cs</DependentUpon>
+    </Compile>
     <Compile Include="FingerprintConfig.cs" />
+    <Compile Include="FingerPrintNotRecorded.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FingerPrintNotRecorded.Designer.cs">
+      <DependentUpon>FingerPrintNotRecorded.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FingerPrintScanner.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FingerPrintScanner.Designer.cs">
+      <DependentUpon>FingerPrintScanner.cs</DependentUpon>
+    </Compile>
     <Compile Include="GridMapper\CourseMap.cs" />
     <Compile Include="LecturerControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="LecturerControl.Designer.cs">
       <DependentUpon>LecturerControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Login.Designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
     </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
@@ -142,6 +168,12 @@
     </Compile>
     <Compile Include="ManageStaffForm.Designer.cs">
       <DependentUpon>ManageStaffForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ManageStudent.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ManageStudent.Designer.cs">
+      <DependentUpon>ManageStudent.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -175,14 +207,29 @@
     <EmbeddedResource Include="DepartmentForm.resx">
       <DependentUpon>DepartmentForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FingerprintCancelBioDelete.resx">
+      <DependentUpon>FingerprintCancelBioDelete.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FingerPrintNotRecorded.resx">
+      <DependentUpon>FingerPrintNotRecorded.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FingerPrintScanner.resx">
+      <DependentUpon>FingerPrintScanner.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="LecturerControl.resx">
       <DependentUpon>LecturerControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ManageStaffForm.resx">
       <DependentUpon>ManageStaffForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ManageStudent.resx">
+      <DependentUpon>ManageStudent.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -216,6 +263,7 @@
       <Name>DataAccess</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
