--- a/StudentRecordManagementSystem/StudentRecordManagementSystem.csproj
+++ b/StudentRecordManagementSystem/StudentRecordManagementSystem.csproj
@@ -247,6 +247,12 @@
     <Compile Include="Department\SelectLecturer.Designer.cs">
       <DependentUpon>SelectLecturer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Department\RegisterUnits.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Department\RegisterUnits.Designer.cs">
+      <DependentUpon>RegisterUnits.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Admin\AddStaffForm.resx">
       <DependentUpon>AddStaffForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -336,6 +342,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Department\SelectLecturer.resx">
       <DependentUpon>SelectLecturer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Department\RegisterUnits.resx">
+      <DependentUpon>RegisterUnits.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
