--- a/StudentRecordManagementSystem/StudentRecordManagementSystem.csproj
+++ b/StudentRecordManagementSystem/StudentRecordManagementSystem.csproj
@@ -253,6 +253,12 @@
     <Compile Include="Department\RegisterUnits.Designer.cs">
       <DependentUpon>RegisterUnits.cs</DependentUpon>
     </Compile>
+    <Compile Include="Department\UnitsRegisterList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Department\UnitsRegisterList.Designer.cs">
+      <DependentUpon>UnitsRegisterList.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Admin\AddStaffForm.resx">
       <DependentUpon>AddStaffForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -345,6 +351,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Department\RegisterUnits.resx">
       <DependentUpon>RegisterUnits.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Department\UnitsRegisterList.resx">
+      <DependentUpon>UnitsRegisterList.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
