Reporting generation enabled

--- a/StudentRecordManagementSystem/StudentRecordManagementSystem.csproj
+++ b/StudentRecordManagementSystem/StudentRecordManagementSystem.csproj
@@ -59,9 +59,11 @@
     <ApplicationIcon>student.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AxShockwaveFlashObjects, Version=1.0.0.0, Culture=neutral, PublicKeyToken=692fbea5521e1304" />
     <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
     <Reference Include="CrystalDecisions.ReportSource, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
     <Reference Include="CrystalDecisions.Shared, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.Windows.Forms, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
     <Reference Include="ftrSDKHelper13">
       <HintPath>..\..\SDK 4.2\Bin\ftrSDKHelper13.dll</HintPath>
     </Reference>
@@ -71,6 +73,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -292,6 +296,18 @@
     <Compile Include="Department\UnitsRegisterList.Designer.cs">
       <DependentUpon>UnitsRegisterList.cs</DependentUpon>
     </Compile>
+    <Compile Include="ReportsAdmin\StaffList.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>StaffList.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="ReportsAdmin\ViewStaffList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReportsAdmin\ViewStaffList.Designer.cs">
+      <DependentUpon>ViewStaffList.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Admin\AddStaffForm.resx">
       <DependentUpon>AddStaffForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -400,6 +416,13 @@
     <EmbeddedResource Include="Department\UnitsRegisterList.resx">
       <DependentUpon>UnitsRegisterList.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ReportsAdmin\StaffList.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>StaffList.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ReportsAdmin\ViewStaffList.resx">
+      <DependentUpon>ViewStaffList.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -427,7 +450,8 @@
     <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Reports\crystals\" />
+    <Folder Include="ReportsDepartment\" />
+    <Folder Include="ReportsLecturer\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
